--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,17 @@
-pandas==2.2.2
-numpy==1.26.4
-scikit-learn==1.5.1
-matplotlib==3.9.2
-seaborn==0.13.2
-plotly==5.23.0
-joblib==1.4.2
-scipy==1.14.0
-jupyter==1.1.1
+beautifulsoup4==4.12.3
+Flask==3.0.3
 ipykernel==6.29.5
-jupyter_client==8.6.2
+ipython==8.26.0
+Jinja2==3.1.4
+joblib==1.4.2
 json5==0.9.25
-jupyter-lsp==2.2.5
-jupyter_client==8.6.2
-jupyter_core==5.7.2
-jupyter_server==2.14.2
-jupyter_server_terminals==0.5.3
+jupyter==1.1.1
 jupyterlab==4.2.5
-jupyterlab_pygments==0.3.0
-jupyterlab_server==2.27.3
-jupyterlab_widgets==3.0.13
+keras==3.5.0
+matplotlib==3.9.2
+matplotlib-inline==0.1.7
+numpy==1.26.4
+pandas==2.2.2
+scikit-learn==1.5.1
+scipy==1.14.0
+seaborn==0.13.2
